App Icon Updated Some Validation on Sign Up Screen A little bit  change in design Google Authentication has  been done

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Kisaan 1.0</string>
+    <string name="web_client_id">266103464396-v8hkb6hrif99p15k8ga86ramb8v43hev.apps.googleusercontent.com</string>
+
 </resources>
